# Synthetic-Cold-Splits-Are-Not-Enough

./: .gitignore  AGENTS.md  AUTO_REVIEW.md  HANDOFF.md  PAPER_PLAN.md  README.md  REVIEW_STATE.json  pyproject.toml  requirements-core.txt  requirements-models.txt
benchmark_resources/: README.md  RELEASE_MANIFEST.md
benchmark_resources_smoke/: README.md  mock_eval.json  mock_predictions.csv
docs/: BENCHMARKS.md  DATA_ACCESS.md  GITHUB_RELEASE_CHECKLIST.md  REPRODUCE_BENCHMARKS.md
paper/: Fig1.eps  Fig2.eps  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  math_commands.tex  references.bib
refine-logs/: EXPERIMENT_PLAN.md  EXPERIMENT_TRACKER.md
reports/: AUTO_REVIEW.md  BASELINE_PANEL_EXPANSION.md  BENCHMARK_SCREENING_SUMMARY.md  BENCHMARK_TABLE_LIVE.md  BENCHMARK_TAXONOMY.md  CONTROLLED_PATENT_BOOTSTRAP.md  DISTRIBUTION_SHIFT_BENCHMARK_PIVOT.md  EXTERNAL_PANEL_LIVE.md  IDEA_REPORT.md  IMPLEMENTATION_PLAN.md  JCAMD_COVER_LETTER_DRAFT.md  JCAMD_SUBMISSION_CHECKLIST.md  MANUSCRIPT_FIRST_DRAFT.md  MANUSCRIPT_SKELETON.md  PAPER_TABLE_DRAFTS.md  PATENT_DECISION_PANEL.md  PATENT_SHIFT_DIAGNOSIS.md  PATENT_SHIFT_DIAGNOSIS_EXTERNAL.md  PATENT_SLICE_BOOTSTRAP.md  RESEARCH_PIPELINE_REPORT.md  RESULTS_SECTION_DRAFT.md  ROUTER_INVESTIGATION.md  SYNTHETIC_SIMILARITY_DIAGNOSIS.md  TARGET_MEMORY_REDO.md  UNCERTAINTY_SUPPORT.md  bootstrap_pairwise_ci.json  bootstrap_pairwise_ci_controlled_patent.json  bootstrap_pairwise_ci_expanded_panel.json  bootstrap_pairwise_ci_external_main.json  bootstrap_pairwise_ci_full_external_and_internal.json  (+5 more)
(+175 files in other folders)
