[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dti-benchmark-suite"
version = "0.1.0"
description = "Benchmark builders and evaluators for synthetic and temporal/provenance DTI validation."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
